ka1/kube1/services/vikunja/vikunja-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vikunja-https-gateway
  annotations:
    cert-manager.io/cluster-issuer: "clusterissuer-cloudflare-acme-prod"
    brodatzki.net/enable-public-tunnel: "true"
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "vikunja.ka1.brodatzki.net"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: vikunja-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      hostname: "vikunja.ka1.brodatzki.net"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vikunja-http-to-https-redirect
spec:
  parentRefs:
    - name: vikunja-https-gateway
      sectionName: http
  hostnames:
    - "vikunja.ka1.brodatzki.net"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vikunja-service-route
spec:
  parentRefs:
    - name: vikunja-https-gateway
      sectionName: https
  hostnames:
    - "vikunja.ka1.brodatzki.net"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: vikunja
          port: 3456
